# program-train

./: .gitignore  README.md  main.c
program-train/: CMakeLists.txt  build.sh  exectuable.sh  program-train.cbp  program-train.depend
program-train/src/: .gitignore  CMakeLists.txt  Makefile  build.sh  cscope.sh  ctags.sh  debug.sh  exe  exectuable.sh  loop.sh  main.cpp  update-make.sh  valgrind-exe.sh
program-train/src/docs/: readme.txt
program-train/src/libs/: readme.txt
program-train/src/libs/jsoncpp/: CMakeLists.txt
program-train/src/libs/jsoncpp/src/: json_value.cpp
program-train/src/libs/x86_64/lib/: libpqxx.la
program-train/src/srcs/: build.sh  exectuable.sh  manager.cpp  manager.hpp  readme.txt  update-make.sh
program-train/src/srcs/advanced/: advanced.cpp  advanced.hpp
program-train/src/srcs/advanced/concurrency/: concurrency.cpp  concurrency.hpp
program-train/src/srcs/advanced/design-pattern/: design-pattern.cpp  design-pattern.hpp
program-train/src/srcs/algorithm/: algorithm_main.cpp  algorithm_main.h  m-algorithm.cpp  m-algorithm.hpp  malgorithm.cpp  malgorithm.hpp
program-train/src/srcs/algorithm/ds/: binary-tree-def.hpp  binary-tree-nr-def.hpp  binary-tree-threaded-def.hpp  circle-list-def.hpp  circle-queue-def.hpp  data-structure.c  data-structure.cpp  data-structure.h  data-structure.hpp  data_structure.cpp  data_structure.h  dbl-list-def.hpp  dequeue-def.hpp  gen-list-def.hpp  gen-list.cpp  gen-list.hpp  graph-def.hpp  graph.cpp  graph.hpp  heap-def.hpp  linear-list-def.hpp  linear-list.cpp  linear-list.hpp  liner_list.h  linked-queue-def.hpp  linked-stack-def.hpp  mqueue-def.hpp  mqueue.cpp  mqueue.hpp  mstack-def.hpp  mstack.cpp  mstack.hpp  mstring.hpp  pri-queue-def.hpp  readme.txt  search-def.hpp  search.cpp  search.hpp  seq-list-def.hpp  seq-list.cpp  (+14 more)
program-train/src/srcs/algorithm/others/: finder-en.cpp  finder-en.hpp  finder.cpp  finder.hpp  hsb2hsl.c  hsb2hsl.h  hue_driver.c  hue_driver.h  other-string.cpp  other-string.hpp
program-train/src/srcs/algorithm/sl/: README.md  readme.txt  statistical-learning.cpp  statistical-learning.hpp
program-train/src/srcs/algorithm/stl/: mutating-algo.cpp  mutating-algo.h  non-mutating-algo.cpp  non-mutating-algo.h  sorting-algo.cpp  sorting-algo.h
program-train/src/srcs/boost/: boost_test.cpp
program-train/src/srcs/c_src/: boost_test.cpp  boost_test.h  build.sh  cast_test.cpp  cast_test.h  chrono_test.cpp  chrono_test.h  class_test.cpp  class_test.h  condition_variable.cpp  container_test.cpp  container_test.h  ctest.c  ctest.h  drived_test.cpp  drived_test.h  exectuable.sh  function_test.cpp  function_test.h  generic_test.h  lambda.cpp  lambda.h  other.cpp  other.h  overload.cpp  overload.h  refrence_test.cpp  refrence_test.h  regex_cpp11.cpp  regex_test.cpp  regex_test.h  smart_pointer.cpp  smart_pointer.h  sync_queue.h  template_test.cpp  template_test.h  thread_test.cpp  thread_test.h
program-train/src/srcs/cases/: cases.cpp  cases.hpp  cases_main.cpp  cases_main.h  infinite_loops_v2.cpp  infinite_loops_v2.h  readme.txt
program-train/src/srcs/cases/binditem-tetris/: bit.cpp
program-train/src/srcs/cases/case-other/: callstack-log.cpp  callstack-log.hpp  case-other.cpp  case-other.hpp
program-train/src/srcs/cases/case002/: README.md  denoise.cpp  denoise.hpp  dic-parser.cpp  dic-parser.hpp  disk-dic.cpp  disk-dic.hpp  format-later-stage.cpp  format-later-stage.hpp  format-parser.cpp  format-parser.hpp  format-readme.txt  formatParsing.cpp  formatParsing.h  python-module.hpp  rfileoprt.cpp  rfileoprt.h  rwfileoprt.cpp  segmentation.cpp  segmentation.hpp  statistics.cpp  statistics.hpp  stringTools.cpp  stringTools.h
program-train/src/srcs/cases/case003/: disk.cpp  disk.hpp  kb-common.hpp  key-bind-main.cpp  key-bind-main.hpp  msg.cpp  msg.hpp
program-train/src/srcs/cases/case004/: binditem-tetris.cpp  binditem-tetris.hpp  bit.cpp  bit.hpp  bt-common.hpp
program-train/src/srcs/cases/case005/: ts-buffer.cpp  ts-buffer.hpp  ts-parser-main.cpp  ts-parser.c  ts-parser.cpp  ts-parser.h  ts-parser.hpp  ts-unit.cpp  ts-unit.hpp
program-train/src/srcs/cases/case006/: code-formatter.cfg  code-formatter.cpp  code-formatter.hpp  readme.txt
program-train/src/srcs/cases/code-formater/: code-formatter.hpp
program-train/src/srcs/cases/dic-parser/: alpha-bet.cpp  alpha-bet.hpp  denoise.cpp  dic-parser.cpp  dic-parser.hpp  disk-dic.cpp  disk-dic.hpp  format-later-stage.cpp  format-parser.cpp  formatParsing.h  python-module.cpp  (+4 more)
program-train/src/srcs/db/: db-caller.cpp  db-caller.hpp  db_test.cpp  db_test.h  db_test.hpp  normal.cpp  normal.h  normal.hpp  sqlite-cmd.txt
program-train/src/srcs/linux/: linux_main.cpp  linux_main.h  mlinux.cpp  mlinux.hpp  sys_cmd.cpp  sys_cmd.hpp
program-train/src/srcs/ooc/: cenum.h  object-c-macro.h  object_c.c  object_c.h  object_fileoprt.h  object_folderoprt.h  object_string.h  object_string_readme.txt  object_table.h
program-train/src/srcs/primer/: c-primer.c  c-primer.h  cast_test.cpp  cast_test.h  chrono_test.cpp  chrono_test.h  class-def.hpp  class-enhenced.cpp  class-enhenced.hpp  class_test.cpp  class_test.h  clib-eg-linux.c  clib-eg-linux.h  clib-eg.c  clib-eg.h  condition_variable.h  ctest.c  ctest.h  drived_test.h  exception-ex.cpp  exception-ex.hpp  exception_test.cpp  exception_test.h  function_test.h  generic_test.cpp  generic_test.h  jump.c  jump.cpp  jump.h  jump.hpp  lambda.cpp  lambda.h  operator-overload.cpp  operator-overload.hpp  other.cpp  other.h  overload.cpp  overload.h  primer.cpp  primer.hpp  (+17 more)
program-train/src/srcs/sep/: readme.txt  sep.cpp  sep.hpp
program-train/src/srcs/sort/: insertion_sort.c  insertion_sort.h
program-train/src/srcs/stl/: container-test.cpp  container-test.h  container.cpp  container.hpp  container_test.cpp  container_test.h  container_test.hpp
program-train/src/srcs/tools/: cenum.h  cfg-loader.cpp  cfg-loader.hpp  dbgprint.h  format.c  format.h  mbacktrace.c  mbacktrace.h  object-c-macro.h  readme.txt  stamp.c  stamp.h  stopwatch.c  stopwatch.h  timer.cpp  timer.h  timing.c  timing.h
(+346 files in other folders)
